fix(): Adds a release job

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           for module in modules/*.module; do
-            gh release upload ${{ github.ref }}
+            gh release upload ${{ github.ref }} $module
           done
           
