--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,8 @@
 name: Release a Module Version
 
 on:
-  push:
-    tags:
-      - "v*"
+  release:
+    types: [published]
 
 jobs:
   create-a-new-release:
@@ -21,25 +20,16 @@ jobs:
             version=$(jq -r '.version' $d/index.json)
             filename=${d}-${version}.module
             zip -r $filename $d
-            echo $filename >> release_notes.txt
           done
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-            tag_name: ${{ github.ref }}
-            release_name: Release ${{ github.ref }}
-            body_path: modules/release_notes.txt
-            draft: false
-            prerelease: false
       - name: upload artifacts
         id: upload_artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           for module in modules/*.module; do
-            gh release upload ${{ github.ref }} $module
+            gh release upload ${{ github.ref_name }} $module
+            echo $module >> file_notes.txt
           done
+          gh release edit ${{ github.ref_name }} --notes-file file_notes.txt
           
+        
