--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,8 @@
 name: Release a Module Version
 on:
-  release:
-    types: [created,published]
+  push:
+    tags:
+      - '*'
 
 jobs:
   create-a-new-release:
@@ -20,14 +21,14 @@ jobs:
             filename=${d}-${version}.module
             zip -r $filename $d
           done
-      - name: upload artifacts
-        id: upload_artifacts
+      - name: Attach Modules to Release
+        id: attach_modules
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           for module in modules/*.module; do
             gh release upload ${{ github.ref_name }} $module
-            echo $module >> file_notes.txt
+            echo "Updated $module" >> file_notes.txt
           done
           gh release edit ${{ github.ref_name }} --notes-file file_notes.txt
           
